# cppixelsorter

./: .cppixelsorter.theme  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  build-appimage.sh  docker-compose.yml  installed.md  main.cpp
assets/: icon.kra  logo.aseprite
hdr/: baseImageSorter.hpp  basicTextureRect.hpp  cli.hpp  cliImageSorter.hpp  embed_data.hpp  filepicker.hpp  gui.hpp  icon_data.hpp  imageData.hpp  imageSorter.hpp  sortTask.hpp  textureRect.hpp  timer.hpp  zoomableTextureRect.hpp
hdr/Sorters/: baseImageSorter.hpp  verticalSorter.hpp
hdr/Ui/: Colors.hpp  UiManager.hpp  baseElement.hpp  button.hpp  checkbox.hpp  config.hpp  cursorManager.hpp  dropdown.hpp  logger.hpp  slider.hpp  textBox.hpp  textButton.hpp  textManager.hpp
hdr/Ui/basic/: button.hpp  textBox.hpp  textButton.hpp
hdr/Ui/container/: hbox.hpp  ibox.hpp  vbox.hpp
scripts/: huebar.py
src/: basicTextureRect.cpp  cli.cpp  cliImageSorter.cpp  embed_data.cpp  filepicker.cpp  gui.cpp  imageData.cpp  imageSorter.cpp  main.cpp  textureRect.cpp  zoomableTextureRect.cpp
src/Sorters/: baseImageSorter.cpp  verticalSorter.cpp
src/Ui/: Colors.cpp  UiManager.cpp  button.cpp  checkbox.cpp  config.cpp  cursorManager.cpp  dropdown.cpp  textBox.cpp  textButton.cpp  textManager.cpp  themes.cpp
src/Ui/basic/: button.cpp  checkbox.cpp  textBox.cpp  textButton.cpp
src/Ui/container/: hbox.cpp  ibox.cpp  vbox.cpp
windows_build/: Dockerfile  Makefile  docker-compose.yml
